--- a/osmfr.yml
+++ b/osmfr.yml
@@ -209,7 +209,11 @@ Layer:
           FROM planet_osm_line
           WHERE way && !bbox!
             AND ST_Length(way) > !pixel_width! * 4
-            AND (highway is not null or aeroway in ('runway','taxiway','taxipath','parking_position') or railway in ('light_rail','narrow_gauge','funicular','rail','subway','tram','spur','siding','platform','disused','abandoned','construction','miniature','turntable')) and coalesce(tunnel,covered,'') in ('yes','true','1') and route is null
+            AND (highway is not null
+              or aeroway in ('runway','taxiway','taxipath','parking_position')
+              or railway in ('light_rail','narrow_gauge','funicular','rail','subway','tram','spur','siding','platform','disused','abandoned','construction','miniature','turntable'))
+            and coalesce(tunnel,covered,'') in ('yes','true','1')
+            and route is null
           ORDER BY zz_order) as roads
       simplify_geometries: 'true'
 
