--- a/osmfr.yml
+++ b/osmfr.yml
@@ -134,7 +134,7 @@ Layer:
                 OR building in ('civic','public')
               )
               and way && !bbox!
-              and way_area > !pixel_width!*!pixel_height!
+              and way_area > !pixel_width!*!pixel_height!*10
             ORDER BY z_order,way_area desc) as landcover ) as features
 
   - id: landcover-line
@@ -208,7 +208,7 @@ Layer:
             case  when (z_order<10 and z_order>3 and highway in ('motorway_link','trunk_link','primary_link','secondary_link','tertiary_link')) then 4+(z_order/10)  when (z_order<10 and z_order>3 and highway='tertiary') then 5 else z_order end as zz_order
           FROM planet_osm_line
           WHERE way && !bbox!
-            AND ST_Length(way) > !pixel_width! * 4
+            AND ST_Length(way) > !pixel_width! * 8
             AND (highway is not null
               or aeroway in ('runway','taxiway','taxipath','parking_position')
               or railway in ('light_rail','narrow_gauge','funicular','rail','subway','tram','spur','siding','platform','disused','abandoned','construction','miniature','turntable'))
@@ -327,7 +327,7 @@ Layer:
         FROM planet_osm_polygon
         WHERE "natural"='glacier'
           AND building is null
-          AND way_area > !pixel_width!*!pixel_height!*10
+          AND way_area > !pixel_width!*!pixel_height!*100
         ORDER BY way_area desc
         ) as glaciers
       simplify_geometries: 'true'
@@ -1005,7 +1005,7 @@ Layer:
             AND r.members @> ARRAY['w' || osm_id]
             AND r.tags @> ARRAY['boundary','administrative','admin_level'])
             AND regexp_replace(r.tags::text,'[{}]',',') ~ format(',admin_level,%s,',admin_level)
-          WHERE way && !bbox!
+          WHERE way && !bbox! AND ST_length(way) > !pixel_width! * 10
             AND boundary='administrative'
             AND admin_level is not null
             AND (to_int(admin_level) <= 6
@@ -1427,7 +1427,7 @@ Layer:
             ref,
             char_length(ref) as length
           FROM planet_osm_line
-          WHERE way && !bbox!
+          WHERE way && !bbox! AND ST_length(way) > !pixel_width!
             AND (highway is not null
               OR aeroway is not null)
             AND ref is not null
