amenity included in poi index

--- a/osmfr.yml
+++ b/osmfr.yml
@@ -1174,7 +1174,7 @@ Layer:
           OR tags ? 'mountain_pass'
           OR (railway in ('level_crossing') AND !pixel_width! < 50 /* zoom >= 15 */)
           OR (railway in ('crossing', 'buffer_stop') AND !pixel_width! < 12 /* zoom >= 17 */))
-          AND /* poi index */ (coalesce(aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
+          AND /* poi index */ (coalesce(amenity,aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
         UNION
         SELECT
           way, coalesce(aeroway, military) as aeroway, man_made, railway, "natural", power, coalesce(power_source, "generator:source") as power_source, highway, barrier, tags->'mountain_pass' as mountain_pass, coalesce(tags->'aerodrome', p.military) as aerodrome,
@@ -1190,7 +1190,7 @@ Layer:
           OR "natural" in ('peak','volcano','spring','cave_entrance')
           OR tags ? 'mountain_pass')
           AND way_area > !pixel_width!*!pixel_height!*10
-          AND /* poi index */ (coalesce(aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass') /* index */
+          AND /* poi index */ (coalesce(amenity, aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass') /* index */
         ) as amenity_symbols
       simplify_geometries: 'true'
 
@@ -1221,7 +1221,7 @@ Layer:
           OR ((!scale_denominator! < 4500
             and coalesce(amenity,shop,tourism,highway,man_made,waterway,historic,leisure,power) is not null))
           ) AND way_area > !pixel_width!*!pixel_height!*10)
-          AND /* poi index */ (coalesce(aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
+          AND /* poi index */ (coalesce(amenity,aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
         UNION
         SELECT
           way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical')  as emergency, tags->'conveying' as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg , tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, 0 as way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom,  case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio
@@ -1238,7 +1238,7 @@ Layer:
           OR (!scale_denominator! < 4500
             and coalesce(amenity,shop,tourism,highway,man_made,waterway,historic,leisure,power) is not null)
           )
-          AND /* poi index */ (coalesce(aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
+          AND /* poi index */ (coalesce(amenity,aeroway, military,barrier,man_made, railway, "natural", power,shop, tourism, waterway, historic,leisure,highway) is not null or tags ? 'mountain_pass')
         ORDER BY prio desc, way_area desc ) as points
 
 
